RESOLVED FIXED179046
Assert that no script is executed during LayoutPhase::InRenderTreeLayout
https://bugs.webkit.org/show_bug.cgi?id=179046
Summary Assert that no script is executed during LayoutPhase::InRenderTreeLayout
Ryosuke Niwa
Reported 2017-10-30 21:26:36 PDT
Assert that we never execute scripts during LayoutPhase::InRenderTreeLayout.
Attachments
Adds the assertion (1.79 KB, patch)
2017-10-30 21:28 PDT, Ryosuke Niwa
koivisto: review+
koivisto: commit-queue-
Ryosuke Niwa
Comment 1 2017-10-30 21:28:33 PDT
Created attachment 325424 [details] Adds the assertion
Antti Koivisto
Comment 2 2017-10-31 01:14:47 PDT
Comment on attachment 325424 [details] Adds the assertion View in context: https://bugs.webkit.org/attachment.cgi?id=325424&action=review > Source/WebCore/ChangeLog:3 > + Assert that no script is excused during LayoutPhase::InRenderTreeLayout Should probably be "executed"
Ryosuke Niwa
Comment 3 2017-10-31 01:39:40 PDT
Radar WebKit Bug Importer
Comment 4 2017-10-31 17:11:46 PDT
Note You need to log in before you can comment on or make changes to this bug.