Assert that no script is executed during LayoutPhase::InRenderTreeLayout https://bugs.webkit.org/show_bug.cgi?id=179046

Reviewed by Antti Koivisto.

Added NoEventDispatchAssertion to LayoutPhase::InRenderTreeLayout.

* page/LayoutContext.cpp:
(WebCore::LayoutContext::layout):


Canonical link: https://commits.webkit.org/195182@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224225 268f45cc-cd09-0410-ab3c-d52691b4dbfc